refactor and updated docs
