# app/app.go
@@ -34,15 +34,15 @@ func (a *App) initializeRoutes() {
 	a.Router.HandleFunc("/health", a.Health()).Methods("GET")
 	a.Router.HandleFunc("/login", a.Login()).Methods("GET")
 	a.Router.HandleFunc("/callback", a.Callback()).Methods("GET")
-	a.Router.HandleFunc("/isrc", a.CreateISRC(spotify.GetClient())).Methods("POST") // ToDo change endpoint to track
+	a.Router.HandleFunc("/track", a.CreateTrack(spotify.GetClient())).Methods("POST")
 	a.Router.HandleFunc("/track/{iscr}", a.GetTrackByISRC()).Methods("GET")
 	a.Router.HandleFunc("/tracks", a.GetTracks()).Methods("GET")
 	a.Router.HandleFunc("/artist/{name}", a.GetArtist()).Methods("GET")
 	a.Router.PathPrefix("/docs/swagger.json").Handler(http.StripPrefix("/docs/", http.FileServer(http.Dir("docs"))))
 	a.Router.PathPrefix("/docs/").Handler(httpSwagger.Handler(
-		httpSwagger.URL("http://127.0.0.1:8000/docs/swagger.json"), //The url pointing to API definition
+		httpSwagger.URL("http://127.0.0.1:8000/docs/swagger.json"),
 		httpSwagger.DeepLinking(true),
-		httpSwagger.DocExpansion("none"),
+		httpSwagger.DocExpansion("list"),
 		httpSwagger.DomID("swagger-ui"),
 	)).Methods(http.MethodGet)
 }
